@@ -10,7 +10,7 @@
     <properties>
         <jdk.version>21</jdk.version>
         <!-- https://mvnrepository.com/artifact/io.grpc/grpc-protobuf -->
-        <grpc.version>1.64.0</grpc.version>
+        <grpc.version>1.65.0</grpc.version>
         <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
         <protoc.version>3.24.3</protoc.version>
         <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
@@ -24,7 +24,7 @@
     </properties>
 
     <dependencies>
-        <!-- grpc -->
+        <!-- https://mvnrepository.com/artifact/io.grpc/grpc-netty -->
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty</artifactId>
@@ -82,7 +82,6 @@
             <artifactId>jetcd-core</artifactId>
             <version>0.8.2</version>
             <exclusions>
-
                 <exclusion>
                     <artifactId>slf4j-api</artifactId>
                     <groupId>org.slf4j</groupId>
@@ -110,19 +109,7 @@
             <version>${annotations-api.version}</version>
             <scope>provided</scope>
         </dependency>
-        <!-- junit5 -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>${junit.version}</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.github.stefanbirkner/system-rules -->
-        <dependency>
-            <artifactId>system-rules</artifactId>
-            <groupId>com.github.stefanbirkner</groupId>
-            <version>${system-rules.version}</version>
-            <scope>test</scope>
-        </dependency>
+
 
         <dependency>
             <groupId>io.netty</groupId>
@@ -130,25 +117,48 @@
             <version>4.1.111.Final</version>
             <classifier>osx-x86_64</classifier>
         </dependency>
+
+        <!-- junit5 -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.github.stefanbirkner/system-rules -->
+        <dependency>
+            <groupId>com.github.stefanbirkner</groupId>
+            <artifactId>system-rules</artifactId>
+            <version>${system-rules.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <extensions>
+            <!-- https://mvnrepository.com/artifact/kr.motd.maven/os-maven-plugin -->
             <extension>
-                <artifactId>os-maven-plugin</artifactId>
                 <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
                 <version>${os-maven-plugin.version}</version>
             </extension>
         </extensions>
         <finalName>${project.name}</finalName>
         <plugins>
+            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <release>${jdk.version}</release>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -174,14 +184,17 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- https://mvnrepository.com/artifact/com.coveo/fmt-maven-plugin -->
+            <!-- https://mvnrepository.com/artifact/com.spotify.fmt/fmt-maven-plugin -->
             <plugin>
-                <groupId>com.coveo</groupId>
+                <groupId>com.spotify.fmt</groupId>
                 <artifactId>fmt-maven-plugin</artifactId>
-                <version>2.13</version>
+                <version>2.23</version>
                 <executions>
                     <execution>
                         <goals>
+                            <!-- Goal	Default Phase -->
+                            <!-- format	process-sources-->
+                            <!-- check	verify-->
                             <goal>format</goal>
                         </goals>
                     </execution>
